<resources>
    <string name="app_name">Projek2</string>
    <string name="judul_content">MULTIMEDIA INTERAKTIF</string>
    <string name="judul">SISTEM EKSKRESI PADA MANUSIA</string>
    <string name="judul2">UNTUK SMA/MA KELAS XI</string>
    <string name="judul3">MAGDALENA LELY LORENZA NALELE</string>
    <string name="b_belajar">AYO BELAJAR</string>
    <string name="b_deskripsi">DESKRIPSI MATA PELAJARAN</string>
    <string name="b_profil">PROFIL</string>
    <string name="b_petunjuk">PETUNJUK PENGGUNAAN</string>
    <string name="b_materi">Materi</string>
    <string name="b_glosarium">Glosarium</string>
    <string name="b_vid_belajar">Video Pembelajaran</string>
    <string name="b_tgs_lat">Tugas dan Latihan</string>
    <string name="b_lkpd">LKPD</string>
    <string name="nb_hal2">Klik untuk mempelajari lebih lanjut</string>
    <string name="judul_materi">MATERI</string>
    <string name="b_sis_eks">SISTEM EKSKRESI</string>
    <string name="b_tekno">TEKNOLOGI SISTEM EKSKRESI</string>
    <string name="b_organ">ORGAN SISTEM EKSKRESI PADA MANUSIA</string>
    <string name="b_panduan">PANDUAN PRAKTIKUM</string>
    <string name="nb_hal3">Klik menu untuk mempelajari lebih lanjut</string>
    <string name="judul_sistem">SISTEM EKSKRESI</string>
    <string name="content_sistem">Sistem Ekskresi adalah  pembuangan zat-zat sisa metabolisme yang tidak berguna atau berbahaya jika disimpan di dalam tubuh.</string>
    <string name="content_sistem2">Menurunkan kadar zat produk metabolisme dalam tubuh agar tidak menyebabkan akumulasi (penimbunan)</string>
    <string name="content_sistem3">Menjaga keseimbangan cairan dalam tubuh (homeostasis)</string>
    <string name="content_sistem4">Membantu mempertahankan suhu tubuh</string>
    <string name="content_sistem5">Melindungi sel-sel tubuh dari zat-zat yang bersifat racun</string>
    <string name="judul_organ">ORGAN SISTEM EKSKRESI PADA MANUSIA</string>
    <string name="nb_hal5">Klik pada bagian organ untuk mempelajari lebih lanjut</string>
    <string name="ginjal">Ginjal merupakan organ utama yang memproduksi urine. Ginjal berbentuk seperti kacang dan berwarna merah tua keunguan dengan berat serta besar tergantung pada jenis kelamin dan umur. </string>
    <string name="nb_hal6">Klik pada bagian pertanyaan untuk mengetahui lebih lanjut</string>
    <string name="sumber_ginjal">Sumber : https://med.stanford.edu/news/all-news/2014/06/adult-kidneys-constantly-grow.html</string>
    <string name="nb_hal6b">Klik pada bagian tiap struktur untuk mengetahui lebih lanjut</string>
    <string name="nb_hal6c">Klik pada bagian diatas untuk mengetahui lebih lanjut</string>
    <string name="content_7_1">Hormon ADH (antidiuretic hormone) yang dihasilkan oleh hipotalamus dalam otak. Hilangnya air secara berlebihan karena pengeluaran keringat atau diare akan menyebabkan peningkatan sekresi ADH dan peningkatan reabsorpsi air. Hal ini menyebabkan jumlah urine sedikit dan sebaliknya jika banyak minum maka sekresi ADH sedikit dan reabsorpsi tubulus terhadap air berkurang sehingga jumlah urine yang keluar banyak atau encer.</string>
    <string name="content_7_3">Hormon insulin pada pankreas, jika kekurangan insulin maka kadar glukosa dalam darah tinggi dan reabsorpsi glukosa terganggu sehingga tedapat banyak glukosa (diabetes)</string>
    <string name="content_7_4">Suhu lingkungan</string>
    <string name="content_7_5">Jumlah air yang diminum</string>
    <string name="content_7_6">Konsumsi alkohol, karena dapat menghambat pembebasan ADH sehingga kandungan air dapat urine berkurang</string>
    <string name="content_7_7">Urine berwarna kuning pucat hingga kuning tua.</string>
    <string name="content_7_8">Volume urine yang dihasilkan orang dewasa yang sehat yaitu 800-2.500 mL/hari.</string>
    <string name="content_7_9">Berat jenis urine 1,003-1,035 g/cm dan memiliki sifat agak asam dengan pH 6 atau 4,7-8.</string>
    <string name="content_7_10">Memiliki bau yang khas dan jika didiamkan akan berbau amonia. Pada penderita diabetes, urine berbau manis karena adanya aseton.</string>
    <string name="content_7_11">Urine terdiri dari 95% air dan zat terlarut.</string>
    <string name="content_7_12">Zat yang terkandung dalam urine normal yaitu urea, asam urat, asam hipurat, zat kimia asing, ion natrium, klorin, sulfat, fosfat, kalsium, magnesium, amonium dan kalium.</string>
    <string name="content_korteks">Korteks merupakan bagian ginjal yang paling luar. Bagian ini dikelilingi oleh lapisan jaringan lemak yang berfungsi untuk melindungi bagian dalam ginjal.</string>
    <string name="content_pelvis">Pelvis renalis merupakan ruang atau saluran yang berbentuk menyerupai corong. Ujung corong bercabang menjadi 2 atau 3 kaliks major dan setiap kaliks major bercabang menjadi kaliks minor.  Kaliks minor berfungsi sebagai tempat untuk menampung urine kemudian urine masuk menuju kaliks major dan selanjutnya menuju pelvis renalis. Urine tersebut kemudian disaluran menuju kandung kemih melalui ureter.
</string>
    <string name="content_arteri">Arteri pada ginjal berfungsi untuk membawa darah yang kaya akan oksigen dari jantung ke ginjal untuk proses filtrasi</string>
    <string name="content_vena">Vena pada ginjal berfungsi untuk membawa darah yang telah mengalami filtrasi atau disaring oleh ginjal kemudian kembali ke jantung</string>
    <string name="content_ure"> Ureter merupakan suatu saluran yang berbentuk  menyerupai saluran pipa dan berfungsi untuk membawa urin dari ginjal menuju kandung kemih. Ureter terdri dari 2 saluran yang terletak di sisi kanan dan kiri tubuh.</string>
    <string name="medula">Medula merupakan jaringan halus yang terdapat di dalam ginjal dan terdiri dari piramida ginjal yang meliputi nefron dan tubulus. Tubulus berfungsi untuk mengangkut cairan tubuh dan darah menuju ginjal.</string>
    <string name="kapsul_bow">Kapsul Bowman merupakan struktur kantong yang berfungsi mengumpulkan filtrat glomerulus kemudian mengalirkan darah ke tubulus renalis</string>
    <string name="nefron">Nefron merupakan penyusun utama ginjal yang berperan dalam proses penyaringan darah. Ginjal tersusun dari 1 juta nefron. Nefron terdiri dari komponen penyaring/badan malpighi yang dilanjutkan oleh saluran-saluran/tubulus. Tiap badan malpighi mengandung kapiler darah yaitu glomerulus yang berada dalam kapsula bowman. </string>
    <string name="glome">Glomerulus merupakan kumpulan pembuluh kapiler yang berada di dalam kapsula bowman. Berfungsi untuk menyaring protein dari darah (proses filtrasi) dan menyerapnya kembali agar dapat digunakan oleh tubuh. Kemudian cairan dan darah bebas protein akan dialirkan menuju kapsul bowman. </string>
    <string name="henle">Lengkung henle merupakan saluran melengkung di area medula yang menghubungkan tubulus kontortus proksimal dengan tubulus kontortus distal. Berfungsi untuk mengatur tingkat osmotik darah dan hipertonik/hipotonik urine.</string>
    <string name="kolektivus">Tubulus kolektivus merupakan saluran yang berfungsi untuk mengumpulkan urine dan dibawa menuju pelvis kemudian disimpan dalam kandung kemih untuk beberapa saat sebelum dikeluarkan.</string>
    <string name="kontortus_pro">Tubulus kontortus proksimal merupakan saluran berliku-liku yang berada setelah glomerulus. Berfungsi untuk reabsorpsi urine primer  atau penyerapan kembali zat-zat yang masih dibutuhkan oleh tubuh.</string>
    <string name="kontortus_dis">Tubulus kontortus distal merupakan saluran berliku-liku yang berada di akhir dari saluran nefron. Berfungsi untuk melakukan proses augmentasi atau penambahan zat yang tidak berguna sehingga urine menjadi pekat dan siap untuk dikeluarkan dari tubuh </string>
    <string name="kapiler">Pembuluh kapiler merupakan pembuluh kecil yang memiliki dinding sangat tipis dan berfungsi untuk menghubungkan arteriol dengan venula</string>
    <string name="uk_1">Ukuran ginjal orang dewasa yaitu memiliki panjang sekitar 11,5 cm, lebar 6 cm dan tebal sekitar 2,5-3,5 cm. Berat ginjal laki-laki dewasa sekitar 125-175 gram sedangkan pada wanita dewasa sekitar 115-155 gram.</string>
    <string name="uk_2">Ginjal berjumlah sepasang dan terletak pada bagian belakang perut, sebelah kanan dan kiri dari tulang belakang.</string>
    <string name="fun_1">Mengeluarkan zat sisa organik, misalnya urea, asam urat, kreatinin, amonia serta produk pengurai hemoglobin dan hormon.
</string>
    <string name="fun_2">Mengeluarkan zat racun, contohnya obat-obatan, zat kimia asing, zat adiktif makanan dan polutan.
</string>
    <string name="fun_3">Mengatur keseimbangan konsentrasi ion-ion penting di dalam tubuh (natrium, kalium, kalsium, magnesium, sulfat dan fosfat).</string>
    <string name="fun_4">Pengendalian konsentrasi nutrisi darah seperti glukosa dan asam amino.
</string>
    <string name="fun_5">Pengatur produksi sel darah merah di dalam sumsum tulang dengan melepas hormon eritropoietin.</string>
    <string name="albu">Albuminuria merupakan penyakit yang terjadi akibat ginjal tidak dapat melakukan proses penyaringan, khususnya penyaringan protein. Albumin merupakan salah satu jenis protein dalam darah, protein yang tidak dapat disaring akan keluar bersama urine. </string>
    <string name="gejala_1">Sering buang air kecil</string>
    <string name="gejala_2">Urine berbusa atau berbuih</string>
    <string name="gejala_3">Mudah lelah</string>
    <string name="gejala_4">Muncul pembengkakan di bagian tubuh, yaitu kaki, tangan, perut, hingga wajah.</string>
    <string name="gejala_5">Mual dan muntah</string>
    <string name="gejala_6">Sesak napas.</string>
    <string name="penyebab">Albuminuria disebabkan oleh kerusakan pada glomerulus sehingga tidak dapat menyaring darah dengan baik. Kondisi yang dapat memicu albuminuria yaitu penderita diabetes, tekanan darah tinggi, gagal ginjal, kanker dan peradangan akut.</string>
    <string name="atasi_1">Merubah gaya hidup untuk menjaga kesehatan ginjal yaitu dengan menghindari makanan berlemak, mengurangi konsumsi makanan yang mengandung protein tinggi, diet garam, olahraga dan tidak merokok.</string>
    <string name="atasi_2">Menurunkan berat badan, jika kelebihan berat badan.</string>
    <string name="atasi_3">Konsumsi obat-obatan yang diresepkan oleh dokter.</string>
    <string name="bat_ginjal">Batu Ginjal merupakan penyakit yang terjadi karena terbentuknya material menyerupai batu pada ginjal. Material tersebut mengendap dan mengkristal seiring waktu. Endapan tersebut dapat berupa senyawa kalsium dan penumpukan asam urat. </string>
    <string name="jenis_batu"> Batu kalsium, batu struvit, batu asam urat, batu
sistin, batu xanthine, batu triamteren, dan batu
silikat. </string>
    <string name="gejala_batu1">Rasa nyeri di daerah perut bagian bawah, pinggang dan punggung.</string>
    <string name="gejala_batu2">Mual dan muntah </string>
    <string name="gejala_batu3">Terdapat darah pada urine</string>
    <string name="gejala_batu4">Demam</string>
    <string name="letak_batu">Batu ginjal terletak pada kaliks, atau pelvis dan jika keluar akan terhenti dan menyumbat pada daerah ureter (batu ureter) dan kandung kemih (batu kandung kemih).
</string>
    <string name="penyebab_batu1">Kelainan metabolisme</string>
    <string name="penyebab_batu2">Sering menahan buang air kecil</string>
    <string name="penyebab_batu3">Kurang minum air putih</string>
    <string name="penyebab_batu4">Kelebihan kadar asam urat dan Vitamin D</string>
    <string name="atasi_batu1">Jika batu masih kecil maka dapat diatasi dengan obat-obatan tertentu dan teknologi sinar laser penghancur batu ginjal (Extracorporeal Shock Wave Lithotripsy). Namun, jika batu membesar maka harus diangkat melalui proses operasi.
</string>
    <string name="atasi_batu2">Minum air putih yang cukup dan konsumsi makanan yang rendah garam</string>
    <string name="atasi_batu3">Tidak menahan buang air kecil</string>
</resources>